--- a/Railway E-Ticket Service/assects/css/admin/signin.css
+++ b/Railway E-Ticket Service/assects/css/admin/signin.css
@@ -7,22 +7,19 @@ body {
 	height: 100vh;
 	width: 100vw;
 	overflow: hidden;
-	font-family: 'Lato', sans-serif;
 	font-weight: 700;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	color: #555;
-	background: #ecf0f3;
+	background: #d8d5d5;
 }
 .login-div {
     width: 423px;
     height: 629px;
     padding: 50px 35px 35px 35px;
-    border-radius: 15px;
     background: #ecf0f3;
-    box-shadow: 10px 10px 20px #cbced1, -10px -10px 20px #ffffff;
-}
+    }
 .logo {
 	background: url("../../trainLogo.png");
 	width: 100px;
@@ -45,9 +42,19 @@ body {
     padding-top: 7px;
     letter-spacing: 0px;
 }
+.error{
+    text-align: center;
+    font-size: 17px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    letter-spacing: 0px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 13px;
+    color: red;
+}
 .fields {
 	width: 100%;
-	padding: 60px 5px 5px 5px;
+	padding: 20px 5px 5px 5px;
 }
 .fields input {
 	border: none;
@@ -61,7 +68,10 @@ body {
 .password {
 	margin-bottom: 30px;
 	border-radius: 10px;
-	box-shadow:inset 5px 5px 8px #cbced1, inset -5px -5px 8px #ffffff
+    background-color: white;
+    border: solid;
+    border-color: #170385;
+	border-width: 1px;
 }
 .usernamee ::placeholder,
 .password ::placeholder {
@@ -88,7 +98,7 @@ body {
 	font-family: 'Lato', sans-serif;
 	color: #fff;
 	text-align: center;
-	background: #fc5130;
+	background: #170385;
 	box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #ffffff;
 }
 .signin-button:hover {
