--- a/Railway E-Ticket Service/assects/css/admin/signup.css
+++ b/Railway E-Ticket Service/assects/css/admin/signup.css
@@ -13,30 +13,21 @@ body {
 	align-items: center;
 	justify-content: center;
 	color: #555;
-	background: #ecf0f3;
+	background: #d8d5d5;
 }
 .login-div {
-    width: 730px;
-    height: 760px;
+    width: 680px;
+    height: 650px;
     padding: 50px 35px 35px 35px;
-    border-radius: 40px;
+    border-radius: 15px;
     background: #ecf0f3;
-    box-shadow: 10px 10px 20px #cbced1, -10px -10px 20px #ffffff;
 }
-.logo {
-	background: url("../../trainLogo.png");
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	margin: 0 auto;
-	box-shadow: 0 0 2px #5f5f5f, 0 0 5px #ecf0f3, 8px 8px 15px #a7aaaf, -8px -8px 15px #ffffff;
-	background-size: cover;
-}
+
 .title {
 	text-align: center;
 	font-size: 28px;
-	padding-top: 24px;
-	letter-spacing: 0.5px;
+	padding-top: 20px;
+	letter-spacing: 0px;
 }
 .sub-title {
     text-align: center;
@@ -45,9 +36,19 @@ body {
     padding-top: 7px;
     letter-spacing: 0px;
 }
+.error{
+    text-align: center;
+    font-size: 17px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    letter-spacing: 0px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 13px;
+    color: red;
+}
 .fields {
 	width: 100%;
-	padding: 60px 5px 5px 5px;
+	padding: 10px 5px 5px 5px;
 }
 .fields input {
 	border: none;
@@ -60,54 +61,69 @@ body {
 
 .namee {
 	float: left;
+	height: 50px;
+	width: 100%;
+	background-color: white;
 	margin-bottom: 30px;
-	border-radius: 25px;
-	box-shadow:inset 5px 5px 8px #cbced1, inset -5px -5px 8px #ffffff
-}
-.emaill {
-	float: right;
-	margin-bottom: 30px;
-	border-radius: 25px;
-	box-shadow:inset 5px 5px 8px #cbced1, inset -5px -5px 8px #ffffff
-}
-.usernamee {
+	border-radius: 5px;
+	border: solid;
+	border-color: #170385;
+	border-width: 1px;
+	
+	}
+.usernamee, .password {
 	float: left;
+	height: 50px;
+	background-color: white;
 	margin-bottom: 30px;
-	border-radius: 25px;
-	box-shadow:inset 5px 5px 8px #cbced1, inset -5px -5px 8px #ffffff
-}
-.password {
+	border-radius: 5px;
+	border: solid;
+	border-color: #170385;
+	border-width: 1px;
+	
+	}
+.emaill, .confirmPassword {
 	float: right;
+	height: 50px;
+	background-color: white;
 	margin-bottom: 30px;
-	border-radius: 25px;
-	box-shadow:inset 5px 5px 8px #cbced1, inset -5px -5px 8px #ffffff
-}
-.confirmPassword {
+	border-radius: 5px;
+	border: solid;
+	border-color: #170385;
+	border-width: 1px;
+	
+	}
+.gender{
 	float: left;
+	height: 50px;
+	width: 49%;
+	background-color: white;
 	margin-bottom: 30px;
-	border-radius: 25px;
-	box-shadow:inset 5px 5px 8px #cbced1, inset -5px -5px 8px #ffffff
-}
+	border-radius: 5px;
+	border: solid;
+	border-color: #170385;
+	border-width: 1px;
+	
+	}
 .dateOfBirth {
 	float: right;
-	width: 293px;
+	height: 50px;
+	width: 49%;
+	background-color: white;
 	margin-bottom: 30px;
-	border-radius: 25px;
-	box-shadow:inset 5px 5px 8px #cbced1, inset -5px -5px 8px #ffffff
-}
+	border-radius: 5px;
+	border: solid;
+	border-color: #170385;
+	border-width: 1px;
+	
+	}
+
+
 input[type="date"]
 {
 	padding-left:65px;
 }
-.gender {
-	padding:20px;
-	float: left;
-	width: 291px;
-	height: 63px;
-	margin-bottom: 30px;
-	border-radius: 25px;
-	box-shadow:inset 5px 5px 8px #cbced1, inset -5px -5px 8px #ffffff
-}
+
 
 .namee ::placeholder,
 .emaill ::placeholder,
@@ -130,13 +146,13 @@ input[type="date"]
 	cursor: pointer;
 	width: 100%;
 	height: 60px;
-	border-radius: 30px;
+	border-radius: 10px;
 	font-size: 20px;
 	font-weight: 700;
 	font-family: 'Lato', sans-serif;
 	color: #fff;
 	text-align: center;
-	background: #fc5130;
+	background: #170385;
 	box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #ffffff;
 }
 .signin-button:hover {
