--- a/Railway E-Ticket Service/style.css
+++ b/Railway E-Ticket Service/style.css
@@ -5,7 +5,7 @@
 
 .main{
     width: 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(trainBackgroung.jpg);
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(assects/trainBackgroung.jpg);
     background-position: center;
     background-size: cover;
     height: 100vh;
