--- a/Railway E-Ticket Service/assects/css/user/bookTicket.css
+++ b/Railway E-Ticket Service/assects/css/user/bookTicket.css
@@ -29,3 +29,10 @@
     padding-right: 40px;
 
 }
+.content .content1{
+    margin-top: 50px;
+    margin-left: 50px;
+    height: 400px;
+    width: 500px;
+    background-color: #e2dfdf;
+}
