--- a/Railway E-Ticket Service/assects/css/user/home.css
+++ b/Railway E-Ticket Service/assects/css/user/home.css
@@ -5,7 +5,7 @@
 
 .main{
     width: 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(../picture/home/home.jpg);
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(../../picture/home/home.jpg);
     background-position: center;
     background-size: cover;
     height: 100vh;
